unit_tests/preprocessor/errors/undef-line.correct
preprocessor/errors/undef-line:1: warning: undefining "__LINE__"
